[gd_scene load_steps=7 format=3 uid="uid://c3k4k5bh8e4bn"]

[ext_resource type="Script" path="res://Public/Levels/Level1/Minigames/Minigame3/game.gd" id="1_3o67k"]
[ext_resource type="Texture2D" uid="uid://bcwie43ljrg8k" path="res://Public/Levels/Level1/Minigames/Minigame3/overleaf.png" id="2_tovc2"]

[sub_resource type="LabelSettings" id="LabelSettings_wfuec"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fydvc"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f3an7"]
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hat7p"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_3o67k")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1155.0
offset_bottom = 672.0
color = Color(0.960784, 0.643137, 0.258824, 1)

[node name="OverleafSprite" type="Sprite2D" parent="Background"]
position = Vector2(254, 84)
texture = ExtResource("2_tovc2")

[node name="PageRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 120.0
offset_top = 161.0
offset_right = 1020.0
offset_bottom = 685.0

[node name="TFGLabel" type="Label" parent="Background/PageRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 35.0
offset_right = 91.0
offset_bottom = 172.0
grow_horizontal = 2
text = "TFG"
label_settings = SubResource("LabelSettings_wfuec")

[node name="TextLabel" type="Label" parent="Background/PageRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -67.0
offset_right = 335.0
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_fydvc")
autowrap_mode = 1
clip_text = true

[node name="VSplitContainer" type="VSplitContainer" parent="Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 26.0
offset_right = -24.0
offset_bottom = 103.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Background/VSplitContainer"]
layout_mode = 2
text = "Â¡De prisa!"
label_settings = SubResource("LabelSettings_f3an7")
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="Background/VSplitContainer"]
layout_mode = 2
text = "..."
label_settings = SubResource("LabelSettings_hat7p")
horizontal_alignment = 2
